# taxai2

./: .gitignore  Jenkinsfile  LICENSE  README.md  deploy.sh  docker-compose.yml  run-openai-test.sh  test-openai.sh
.github/workflows/: ci.yml
ai-agent/: .env.example  Dockerfile  README.md  requirements.txt  run.sh
ai-agent/data/downloads/: news-releases-for-current-month.txt.meta.json  p17.pdf.meta.json  p535.pdf.meta.json  p590b.pdf.meta.json
ai-agent/data/processed/: news-releases-for-current-month.processed.txt  news-releases-for-current-month.processed.txt.meta.json  p17.processed.txt  p17.processed.txt.meta.json  p590b.processed.txt  p590b.processed.txt.meta.json
ai-agent/data/stats/: index_stats.json
ai-agent/src/: __init__.py  config.py  main.py
ai-agent/src/api/: upload_api.py
ai-agent/src/config/: sources.json
ai-agent/src/fetcher/: __init__.py  document_fetcher.py  fetch_irs_updates.py
ai-agent/src/indexing/: indexer.py
ai-agent/src/monitoring/: README.md  audit_accuracy.py  error_handler.py  health_check.py  monitor_data.py
backend/: Dockerfile  README.md  fix_pom.sh  mvnw  pom.xml.fixed  run.bat  run.sh  run_with_debug.sh
browser-extension/: README.md  package-lock.json  package.json  webpack.config.js
browser-extension/src/: manifest.json  popup.html
database/: README.md  data_loader.py  index_manager.py  requirements.txt  run_example.sh  schema.sql
docs/: AI_Integration.md  API_Documentation.md  BROWSER_EXTENSION_TESTING.md  Dev_Notes.md  Extension_User_Guide.md  OPENAI_INTEGRATION_TESTING.md
rag-engine/: CMakeLists.txt  Dockerfile  README.md  SETUP_INSTRUCTIONS.md  init_data_dirs.py  requirements.txt  run.sh  setup.sh
rag-engine/src/: main.cpp  server.cpp  vector_search.cpp
rag-engine/src/embedding/: embedding_model.py
rag-engine/src/retrieval/: retrieval_pipeline.py
rag-engine/src/vectorstore/: faiss_index.cpp
rag-engine/test/: api_test.html  test_retrieval.py
tests/accuracy_tests/: basic.json
tests/backend-tests/: ApiTest.java  IntegrationTest.java
tests/browser-tests/: README.md  api_response_test.js  jest-puppeteer.config.js  memo_storage_test.js  package.json  run-tests.sh  setup.js  test-helpers.js  ui_test.js
tests/rag-tests/: RetrievalTest.cpp
(+33 files in other folders)
